v2.2.1: updated release notes